# cpp_engine

./: CMakeLists.txt  todo.md
include/: Component.hpp  DisplayManager.hpp  Entity.hpp  GameController.hpp  InputHandler.hpp  KeyboardHandler.hpp  Scene.hpp  Window.hpp
include/components/: ColourComponent.hpp  PositionComponent.hpp  RectangleComponent.hpp  SpriteComponent.hpp
include/objects/: BallDude.hpp  Rectangle.hpp  RedRectangle.hpp
src/: DisplayManager.cpp  Entity.cpp  GameController.cpp  InputHandler.cpp  KeyboardHandler.cpp  Scene.cpp  Window.cpp  main.cpp
src/objects/: BallDude.cpp  Rectangle.cpp  RedRectangle.cpp
